wp-content/themes/arizona-envelope/assets/styles/layouts/_header.scss
/* ... */
.admin-bar{
  .site-header{
    top: rem(28);
  }
}

//remove this to a single hero panels components scss file
.hero-panel{
    position: relative;
    z-index: 1;
    background-color: $sand;
	> img{
		width: 100%;
	}
    .container{
        position: absolute;
        bottom: rem(120);
        left: 50%;
        transform: translateX(-50%);
        @media screen and (max-width: 1300px){
            bottom: rem(50);
        }
        @media screen and (max-width: $breakpoint--medium){
            width: 90%;
            bottom: 10px;
        }
        .slider-caption{
            max-width: 40%;
            h1, p {
                color: $medium-gray;
                max-width: 80%;
                margin-bottom: rem(20);
            }
            h1{
                font-size: rem(42);
            }
            p{
                margin-bottom: rem(64);
            }
            a{
                width: 200px;
                margin-right: rem(22);
                padding: 12px 0;
            }
            @media screen and (max-width: $breakpoint--xlarge){
                max-width: 65%;
            }
            @media screen and (max-width: $breakpoint--large){
                max-width: 75%;
                h1{
                    //font-size: rem(32);
                    margin-bottom: rem(10);
                }
                p{
                    margin-bottom: rem(10);
                }
                a{
                    width: rem(160);
                    
                }
            }
            @media screen and (max-width: $breakpoint--medium){
                max-width: 100%;
                h1,p{
                  margin-bottom: rem(10);
                  max-width: 100%;
                }
                h1{
                    font-size: rem(32);
                }
                a{
                    width: rem(160);
                    margin-right: rem(12);
                    
                }
            }
            @media screen and (max-width: $breakpoint--small){
                h1{
                    font-size: rem(26);
                }
                a{
                    width: rem(140);
                    padding: 8px 0;
                    height: auto;
                }
            }
        }
    }
}

//search nav
.search-form{
    background-color: #fff;
    border: 2px solid $medium-gray;
    height: rem(42);
    .search-field{
        border: none;
        min-width: rem(280);
        height: rem(38);
        padding: 0;
        outline: none;
        box-shadow: none;
        text-indent: rem(8);
        &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
            font-family: $heading-font;
            color: $light-gray;
            font-style: italic;
        }
        &::-moz-placeholder { /* Firefox 19+ */
            font-family: $heading-font;
            color: $light-gray;
            font-style: italic;
        }
        &:-ms-input-placeholder { /* IE 10+ */
            font-family: $heading-font;
            color: $light-gray;
            font-style: italic;
        }
        &:-moz-placeholder { /* Firefox 18- */
            font-family: $heading-font;
            color: $light-gray;
            font-style: italic;
        }
        @media screen and (max-width: $breakpoint--xlarge){
            min-width: rem(232);
        }
        @media screen and (max-width: $breakpoint--large){
            min-width: rem(170);
        }
        
    }
    .search-submit{
        border: none;
        height: 80%;
        border-left: 2px solid $light-gray;
        width: 32px;
        padding: 0;
        i{
            color: $brand-orange;
        }
        @media screen and (max-width: $breakpoint--large){
            position: absolute;
            right: 0;
            top: 4px;
        }
        &:hover{
            background-color: transparent;
            opacity: 0.8;
            border-color: $light-gray;
        }
    }
    @media screen and (max-width: $breakpoint--xlarge){

    }
}

//Responsive Nav
// vars

$button-width: 50px;                    // The width of the button area
$button-height: 50px;                   // The height of the button area
$bar-thickness: 5px;                    // The thickness of the button bars
$button-pad: 8px;                      // The left/right padding between button area and bars.
$button-bar-space: 5px;                // The spacing between button bars
$button-transistion-duration: 0.3s;     // The transition duration
.c-hamburger {
  display: block;
  position: relative;
  overflow: hidden;
  margin: rem(30) rem(20) 0 0;
  padding: 0;
  width: $button-width;
  height: $button-height;
  font-size: 0;
  text-indent: -9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: none;
  border-radius: none;
  border: none;
  cursor: pointer;
  transition: background $button-transistion-duration;
  @media screen and (min-width: $breakpoint--large){
    display: none;
  }

}

.c-hamburger:focus {
  outline: none;
}

.c-hamburger span {
  display: block;
  position: absolute;
  top: ($button-height / 2) - ($bar-thickness / 2);
  left: $button-pad;
  right: $button-pad;
  height: $bar-thickness;
  background: $brand-orange;
}

.c-hamburger span::before,
.c-hamburger span::after {
  position: absolute;
  display: block;
  left: 0;
  width: 100%;
  height: $bar-thickness;
  background: $brand-orange;
  content: "";
}

.c-hamburger span::before {
  top: -$bar-thickness - $button-bar-space;
}

.c-hamburger span::after {
  bottom: -$bar-thickness - $button-bar-space;
}

.c-hamburger--htx {
  background-color: transparent;
}

.c-hamburger--htx span {
  transition: background 0s $button-transistion-duration;
}

.c-hamburger--htx span::before,
.c-hamburger--htx span::after {
  transition-duration: $button-transistion-duration, $button-transistion-duration;
  transition-delay: $button-transistion-duration, 0s;
}
/* ... */

